--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,11 +6,32 @@ h1 {
 }
 
 
-
-
 p {
   color: #34495e;
   font-size: 1.2rem;
   text-align: center;
   margin-top: 10px;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  height: auto;
+  border-radius: 10px;
+}
+
+button {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  color: #fff;
+  background-color: #2980b9;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #3498db;
 }
