--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,18 @@
 <h1>{{ title }}</h1>
 
 <div class="container">
-  <img src="{{ imageUrl }}" alt="Logomarca do Angular" width="100" height="100">
-<!-- Property Binging -->
-<img [src]="imageUrl" alt="Logomarca do Angular" width="100" height="100">
 
-<!-- Event Binging -->
-<button (click)="showAlert()" mat-flat-button>Clique aqui</button>
+  <!-- Property Binging -->
+  <img [src]="imageUrl" alt="Logomarca do Angular" width="100" height="100">
 
-<br>
-<!-- Two-way Binding -->
-<label for="fname">Digite um texto:</label>
-<input [(ngModel)]="inputText" type="text" id="fname" name="fname"><br><br>
+  <!-- Event Binging -->
+  <button (click)="showAlert()">Clique aqui</button>
 
-<p>Você digitou: {{inputText}}</p>
+  <br>
+  <!-- Two-way Binding -->
+  <label for="fname">Digite um texto:</label>
+  <input [(ngModel)]="inputText" type="text" id="fname" name="fname"><br><br>
+
+  <p>Você digitou: {{inputText}}</p>
 </div>
 <router-outlet />
